Fixing some responsiveness on mobile applications.

--- a/quizpoint/src/classes/ClassHome.css
+++ b/quizpoint/src/classes/ClassHome.css
@@ -1,19 +1,23 @@
-
 /* 'Your classes' text and div */
 .class-header {
     text-align: center;
     color: white;
 }
-.css-5lbw0b-MuiTypography-root, .css-2ulfj5-MuiTypography-root{
+
+.css-5lbw0b-MuiTypography-root,
+.css-2ulfj5-MuiTypography-root {
     font-family: 'Montserrat', sans-serif !important;
 }
-.css-46bh2p-MuiCardContent-root{
-    padding:24px 16px 16px 16px !important;
+
+.css-46bh2p-MuiCardContent-root {
+    padding: 24px 16px 16px 16px !important;
 }
+
 /* Class cards (div row) */
-.class-cards-element{
-    border-radius:15px !important; 
+.class-cards-element {
+    border-radius: 15px !important;
 }
+
 .class-cards {
     margin-top: 2%;
     display: grid;
@@ -22,18 +26,21 @@
     text-align: center;
     font-family: var(--main-font);
 }
-.class-card-footer{
-    margin-top:9%;
+
+.class-card-footer {
+    margin-top: 9%;
 }
-.class-card-footer > p {
-    text-decoration:none !important;
+
+.class-card-footer>p {
+    text-decoration: none !important;
 }
+
 /* mobile design */
 .class-cards-mobile {
     margin-left: 11%;
     margin-top: 2%;
     display: grid;
     grid-template-columns: 3fr;
-    grid-gap: 3%;
+    grid-gap: 2%;
     text-align: center;
 }
